--- a/src/css/sections/statistics.css
+++ b/src/css/sections/statistics.css
@@ -7,10 +7,47 @@
 
 .statistics .statistics-body {
     width: 85%;
-    min-height: 90vh;
+    min-height: 80vh;
     margin: 0 auto;
     margin-top: 3rem;
+    padding: 2rem;
     border-radius: 35px;
     background-color: var(--background-2);
     box-shadow: var(--box-shadow-1);
+}
+
+.section-body .statistics-sectoin {
+    margin-bottom: 2rem;
+    padding: 2rem;
+    border: var(--border-2);
+    border-width: 2px;
+    border-radius: 35px;
+}
+
+.statistics-sectoin h2 {
+    margin-bottom: 1rem;
+}
+
+.statistics-general .statistics-list {
+    height: 16vh;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.statistics-list .general-section {
+    width: 100%;
+    height: 100%;
+    box-shadow: var(--box-shadow-1);
+    border-radius: 35px;
+}
+
+.general-section h2 {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.general-section p {
+    text-align: center;
 }
