--- a/src/css/sections/news.css
+++ b/src/css/sections/news.css
@@ -6,7 +6,7 @@
     padding-bottom: 4rem;
 }
 
-.news button {
+#news-list button {
     width: 45px;
     height: 45px;
     color: var(--background-1);
@@ -16,7 +16,7 @@
     background-color: var(--background-3);
 }
 
-.news .news-body {
+#news-list .news-body {
     width: 85%;
     min-height: 80vh;
     overflow: hidden;
@@ -29,7 +29,7 @@
     transition: all 0.3s ease;
 }
 
-.news-body .news-sections{
+#news-list .news-sections{
     border: var(--border-2);
     border-width: 2px;
     border-radius: 35px;
@@ -37,23 +37,28 @@
     padding: 1rem;
 }
 
-.news-sections.news-action {
+#news-list .news-sections.news-action {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.news-sections.news-action button {
+#news-list .news-sections.news-action button {
     width: 85px;
     margin: 0rem 0.5rem;
+    transition: 0.3s ease;
 }
 
-.news-sections.news-list {
+#news-list .news-sections.news-action button:hover {
+    color: #0095ff;
+}
+
+#news-list .news-sections.news-list {
     display: flex;
     flex-wrap: wrap;
 }
 
-.news-list .news-section {
+#news-list .news-list .news-section {
     width: 18.9vw;
     height: 43.5vh;
     border: var(--border-2);
@@ -63,7 +68,7 @@
     padding: 1.5rem;
 }
 
-.news-list .news-img {
+#news-list .news-list .news-img {
     height: 22vh;
     margin-bottom: 1rem;
     display: flex;
@@ -73,24 +78,24 @@
     border-radius: 35px;
 }
 
-.news-list .news-img img {
+#news-list .news-list .news-img img {
     width: 100%;
 }
 
-.news-list .news-info {
+#news-list .news-list .news-info {
     height: 13.5vh;
     margin-bottom: 1rem;
     overflow: hidden;
 }
 
-.news-list .news-info h2 {
+#news-list .news-list .news-info h2 {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
 
-.news-list .news-info p {
+#news-list .news-list .news-info p {
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
@@ -99,11 +104,16 @@
     padding: 0.5rem;
 }
 
-.news-list .news-action {
+#news-list .news-list .news-action {
     height: 4.5vh;
     display: flex;
 }
 
-.news-list .news-action button {
+#news-list .news-list .news-action button {
     margin-right: 1rem;
+    transition: 0.3s ease;
+}
+
+#news-list .news-list .news-action button:hover {
+    color: #0095ff;
 }
