--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -13,6 +13,7 @@
 .sidebar .sidebar-body {
     width: 85%;
     height: 90%;
+    overflow: hidden;
     background-color: var(--background-2);
     border-radius: 35px;
     box-shadow: var(--box-shadow-1);
